etc/kubernetes/xwiki-docker.yaml
################################################################################
#      Copyright (C) 2020        Sebastian Francisco Colomar Bauza             #
#      SPDX-License-Identifier:  GPL-2.0-only                                  #
################################################################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
spec:
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - 
        args:
        - $(MYSQL_ARG)
        image: mysql:5.7
        name: mysql
        ports:
        - 
          containerPort: 3306
          protocol: TCP
        volumeMounts:
        - 
          mountPath: /var/lib/mysql
          name: mysql
        - 
          mountPath: /docker-entrypoint-initdb.d
          name: mysql-init
      volumes:
      - 
        name: mysql
        persistentVolumeClaim:
          claimName: mysql
      - 
        configMap:
          name: mysql-init
        name: mysql-init
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xwiki
spec:
  selector:
    matchLabels:
      app: xwiki
  template:
    metadata:
      labels:
        app: xwiki
    spec:
      containers:
      - 
        image: academiaonline/xwiki-docker:latest
        imagePullPolicy: Always
        name: xwiki
        ports:
        - 
          containerPort: 8080
          protocol: TCP
        volumeMounts:
        - 
          mountPath: /usr/local/xwiki          
          name: xwiki
      volumes:
      - 
        name: xwiki
        persistentVolumeClaim:
          claimName: xwiki
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mysql
spec:
  ingress:
  - 
    from:
    - 
      podSelector:
        matchLabels:
          app: xwiki
    ports:
    - 
      port: 3306
      protocol: TCP
  podSelector:
    matchLabels:
      app: mysql
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: xwiki
spec:
  ingress:
  - 
    ports:
    - 
      port: 8080
      protocol: TCP
  podSelector:
    matchLabels:
      app: xwiki
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  ports:
  - 
    port: 3306
    protocol: TCP
  selector:
    app: mysql
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: xwiki
spec:
  ports:
  - 
    nodePort: 30000
    port: 8080
    protocol: TCP
  selector:
    app: xwiki
  type: NodePort
---
